--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
-    <link rel="stylesheet" href="styles/estilos.css">
+    <link rel="stylesheet" href="src/styles/estilos.css">
 </head>
 <body>
     <header class="cabecalho">
@@ -19,7 +19,7 @@
             </p>
         </section>
         <button class="botao-acao" id="entrar">
-            <a href="paginas/cadastro.html" target="_self">Cadastrar-se</a>
+            <a href="src/paginas/cadastro.html" target="_self">Cadastrar-se</a>
         </button>
     </main>
 
@@ -30,7 +30,7 @@
         //Caso já exista um cadastro alteramos as informações do link de forma que ele nos direcione para a página de login
         if ((localStorage.getItem('sexo') != 'null') &&(localStorage.getItem('sexo'))) {
             botao.innerHTML = 'Fazer login'
-            botao.setAttribute('href', 'paginas/login.html')
+            botao.setAttribute('href', 'src/paginas/login.html')
         }
     </script>
 </body>
